--- a/package.json
+++ b/package.json
@@ -11,15 +11,27 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.1.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@tanstack/react-query": "^4.3.7",
+    "@tanstack/react-query-devtools": "^4.3.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-router-dom": "^6.4.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
@@ -38,10 +50,12 @@
     "@testing-library/react": "13.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.8",
     "babel-jest": "28.1.1",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
@@ -54,8 +68,10 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.7.5",
+    "postcss": "8.4.16",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.1.8",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
