--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -21,6 +23,7 @@
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "react": "18.2.0",
@@ -50,6 +53,7 @@
     "@testing-library/react": "13.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
