--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@tanstack/react-query": "^4.3.7",
     "@tanstack/react-query-devtools": "^4.3.7",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
@@ -51,6 +52,7 @@
     "@nrwl/web": "14.7.5",
     "@nrwl/workspace": "14.7.5",
     "@testing-library/react": "13.3.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/passport-jwt": "^3.0.6",
